# www-project-top-10-for-large-language-model-applications

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  CoreTeam.md  Data_Leakage.md  Inadequate_AI_Alignment.md  LICENSE.md  LLM_Top10_List.md  Propt_Injection.md  README.md  SECURITY.md  SSRF.md  changes.md  index.md  info.md  leaders.md  pre-commit-config.yaml  project.owasp.yaml  tab_example.md  translation_progress.csv
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yaml  labels.yaml
.hooks/: check_pinned_hash_dependencies.py  generate_pr_description.py  post_merge.sh  prettier.sh
.scripts/: check_pinned_hash_dependencies.py  generate_readme.py
0_5_vulns/: AdsDawson_DataLeakage.md  AdsDawson_LLM10_Training_Data_Poisoning.md  AdsDawson_Overreliance_LLM_Gen_Content.md  AdsDawson_Priv_Escalation.md  AdsDawson_RCE_SSRF.md  AlekseiRyzhkov_Inexplicability.md  AndySmith_ExcessiveAgency  GTK_LLMAgentHijack  (+25 more)
initiatives/agent_security_initiative/code_samples/top_10_for_llms/frameworks/langgraph/github_improper_output_handling/: Dockerfile  docker-compose.yml  pyproject.toml
initiatives/agent_security_initiative/code_samples/top_10_for_llms/frameworks/langgraph/multi_agent/: README.md  pyproject.toml  requirements.txt
initiatives/agent_security_initiative/frameworks/crewai/insecure-cybersec-agent/: README.md  example.ipynb  pyproject.toml
initiatives/agent_security_initiative/frameworks/crewai/insecure-cybersec-agent/example_project/: README.md  db.py  main.py  metadata.json  utils.py
initiatives/agent_security_initiative/frameworks/crewai/insecure-cybersec-agent/insecure_cybersec_agent/: __init__.py  crew.py  main.py  tools.py
initiatives/agent_security_initiative/frameworks/crewai/insecure-cybersec-agent/insecure_cybersec_agent/config/: agents.yaml  tasks.yaml
initiatives/genai_red_team_handbook/sandboxes/RAG_local/: .gitignore  Makefile  README.md  pyproject.toml
initiatives/genai_red_team_handbook/sandboxes/RAG_local/ETL/: ingest.py
initiatives/genai_red_team_handbook/sandboxes/RAG_local/app/: main.py  rag_engine.py
initiatives/genai_red_team_handbook/sandboxes/RAG_local/app/mocks/: __init__.py  openai.py  pinecone.py  s3.py
initiatives/genai_red_team_handbook/sandboxes/RAG_local/client/: gradio_app.py  main.py
initiatives/genai_red_team_handbook/sandboxes/RAG_local/config/: client_config.toml  prompts.toml
initiatives/genai_red_team_handbook/sandboxes/RAG_local/threat_model/: RAG_TM_diagram.json  RAG_TM_report.md
initiatives/genai_red_team_handbook/sandboxes/llm_local_langchain_core_v1.2.4/: Makefile  README.md  pyproject.toml
initiatives/genai_red_team_handbook/sandboxes/llm_local_langchain_core_v1.2.4/app/mocks/: README.md  openai.py
initiatives/genai_red_team_handbook/sandboxes/llm_local_langchain_core_v1.2.4/client/: gradio_app.py  main.py
initiatives/genai_red_team_handbook/sandboxes/llm_local_langchain_core_v1.2.4/config/: client_config.toml  prompts.toml
initiatives/genai_red_team_handbook/sandboxes/llm_local_langchain_core_v1.2.4/threat_model/: LLM_TM_report.md
initiatives/genai_red_team_handbook/tools/ghostglyph/: .gitignore  README.md  pyproject.toml
initiatives/genai_red_team_handbook/tools/ghostglyph/.cursor/rules/: escape-css-fstrings.mdc  minimize-changes.mdc  package-management.mdc  plan-first.mdc
initiatives/genai_red_team_handbook/tools/ghostglyph/src/: app.py  charset.py  encoder.py
(+898 files in other folders)
