[project]
name = "llm-mock-api-template"
version = "0.1.0"
description = "Mock API Template for Testing LLM Applications Locally"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[all]>=0.121.3",
    "gradio>=5.50.0",
    "mirascope>=1.25.7",
    "openai>=2.8.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "tomli>=2.3.0",
    "uvicorn>=0.38.0",
    "chromadb>=0.5.0",
    "pypdf>=5.1.0",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "mypy",
]
