[project]
name = "llm-local-langchain-v1-1-3"
version = "0.1.0"
description = "LangChain v1.1.3 Sandbox for GenAI Red Team Handbook"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[all]>=0.121.3",
    "gradio>=5.50.0",
    "langchain==1.2.0",
    "langchain-core==1.2.4",
    "langchain-openai==1.1.6",
    "openai>=2.8.1",
    "requests>=2.32.5",
    "tomli>=2.3.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["black", "isort", "mypy"]
