[project]
name = "ghostglyph"
version = "0.1.0"
description = "ASCII smuggling tool for generative AI red teaming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

