package-mode = false

[tool.poetry]
name = "multi-agent"
version = "0.1.0"
description = ""
authors = ["allie_secvendors <allie@secvendors.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.60"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-community = "^0.3.13"
faker = "^33.1.2"
nest-asyncio = "^1.6.0"
beautifulsoup4 = "^4.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
